React movie search
simple movie searcher with an API

--- a/movies/movies/src/App.css
+++ b/movies/movies/src/App.css
@@ -1,38 +1,324 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400,700");
+@import url("https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i");
+
+* {
+  /* Reset all default margins, borders and box-sizing */
+  margin: 0;
+  border: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+:root {
+  /* Define two custom fonts */
+  --font-roboto: "Roboto Slab", serif;
+  --font-raleway: "Raleway", sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+  /* Set the default font family to Roboto Slab */
+  font-family: var(--font-roboto);
+  /* Set the background color of the body to a dark gray */
+  background-color: #212426;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+
+.app {
+  /* Add some padding to the main container */
+  padding: 4rem;
+
+  /* Center the container */
   display: flex;
+  justify-content: center;
+  align-items: center;
   flex-direction: column;
+}
+
+h1 {
+  /* Style the title */
+  font-size: 3rem;
+  letter-spacing: 0.9px;
+  /* Add a gradient effect to the title */
+  background: linear-gradient(
+    90deg,
+    rgba(249, 211, 180, 1) 0%,
+    rgba(249, 211, 180, 0) 100%
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  width: fit-content;
+}
+
+.search {
+  /* Width of the search bar */
+  width: 71%;
+
+  /* Margin around the search bar */
+  margin: 4rem 0 2rem;
+
+  /* Flex container for the search bar */
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+  /* Padding and border radius for the search bar */
+  padding: 1.5rem 1.75rem;
+  border-radius: 3rem;
+
+  /* Background color for the search bar */
+  background: #1f2123;
+
+  /* Box shadow for the search bar */
+  -webkit-box-shadow: 5px 5px 7px #1c1d1f, -5px -5px 7px #222527;
+  box-shadow: 5px 5px 7px #1c1d1f, -5px -5px 7px #222527;
 }
 
-.App-link {
-  color: #61dafb;
+.search input {
+  /* Flex properties for the input field */
+  flex: 1;
+  border: none;
+  font-size: 1.5rem;
+  font-family: var(--font-raleway);
+  font-weight: 500;
+  padding-right: 1rem;
+
+  /* Outline and color properties for the input field */
+  outline: none;
+  color: #a1a1a1;
+  background: #1f2123;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.search img {
+  /* Width and height of the search icon */
+  width: 35px;
+  height: 35px;
+
+  /* Cursor property for the search icon */
+  cursor: pointer;
+}
+
+/* .search button {
+  padding: 20px 40px;
+  border-radius: 0.5rem;
+  margin-left: 15px;
+  color: #a1a1a1;
+  font-family: var(--font-raleway);
+  font-weight: 900;
+  letter-spacing: 0.75px;
+  font-size: 1.25rem;
+  cursor: pointer;
+  background: #1f2123;
+  -webkit-box-shadow: 5px 5px 7px #1c1d1f, -5px -5px 7px #222527;
+  box-shadow: 5px 5px 7px #1c1d1f, -5px -5px 7px #222527;
+} */
+
+.empty {
+  width: 100%;
+  margin-top: 3rem; /* add some margin to the top */
+  
+  /* center the text horizontally and vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+/* styling for the message text */
+.empty h2 {
+  font-size: 1.25rem;
+  color: #f9d3b4;
+  font-family: var(--font-raleway);
+}
+
+/* .container class is used for displaying the search results */
+.container {
+  width: 100%;
+  margin-top: 3rem; /* add some margin to the top */
+  
+  /* center the search results horizontally and vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+  /* wrap the search results when they overflow */
+  flex-wrap: wrap;
+}
+
+/* 
+  Movie container styles
+  */
+  .movie {
+    /* - Sets width and height of the container */
+    width: 310px;
+
+    height: 460px;
+
+    /* - Adds margin for spacing between movie containers */
+    margin: 1.5rem;
+    
+    /* - Positions container as relative */
+    position: relative;
+
+    border-radius: 12px;
+
+    overflow: hidden;
+
+    /* - Adds border radius and overflow properties */
+    border: none;
+    
+    /* - Adds transition effect for hover state */
+    transition: all 0.4s cubic-bezier(0.175, 0.885, 0, 1);
+
+    /* - Adds box shadow for visual effect */
+    box-shadow: 0px 13px 10px -7px rgba(0, 0, 0, 0.1);
+}
+
+
+  /* Styles for the inner div of the movie container */
+
+  .movie div:nth-of-type(1) {
+    /* - Positions div as absolute */
+    position: absolute;
+
+    /* - Adds padding and sets width to 100% */
+    padding: 16px;
+
+    width: 100%;
+
+    /* - Sets initial opacity to 0 */
+    opacity: 0;
+
+    /* - Sets top position to 0 */
+    top: 0;
+
+    /* - Sets text color */
+  color: #f9d3b4;
+}
+
+/* Styles for hover state of movie container */
+  .movie:hover {
+    /* - Increases box shadow size */
+    box-shadow: 0px 30px 18px -8px rgba(0, 0, 0, 0.1);
+
+    /* - Scales container up slightly */
+  transform: scale(1.05, 1.05);
+}
+
+/* movie container */
+.movie div:nth-of-type(2) {
+  width: 100%;
+  height: 100%;
+}
+
+/* image within movie container */
+.movie div:nth-of-type(2) img {
+  height: 100%;
+  width: 100%;
+}
+
+/* container for movie details */
+.movie div:nth-of-type(3) {
+  z-index: 2;
+  background-color: #343739;
+  padding: 16px 24px 24px 24px;
+
+  /* position container at bottom of movie container */
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  left: 0;
+}
+
+.movie div:nth-of-type(3) span {
+  /* sets the font family for the span element within the 3rd div of .movie */
+  font-family: "Raleway", sans-serif;
+  
+  /* sets the text to be uppercase */
+  text-transform: uppercase;
+  
+  /* sets the font size for the span element */
+  font-size: 13px;
+  
+  /* sets the spacing between letters for the span element */
+  letter-spacing: 2px;
+  
+  /* sets the font weight for the span element */
+  font-weight: 500;
+  
+  /* sets the color of the text for the span element */
+  color: #f0f0f0;
+}
+
+.movie div:nth-of-type(3) h3 {
+  /* Add a top margin of 5 pixels */
+  margin-top: 5px;
+  /* Set the font-family to "Roboto Slab" */
+  font-family: "Roboto Slab", serif;
+  /* Set the text color to #f9d3b4 */
+  color: #f9d3b4;
+}
+
+/* When movie is hovered over, the div with nth-of-type(2) will have its height set to 100% and its opacity set to 0.3 */
+.movie:hover div:nth-of-type(2) {
+  height: 100%;
+  opacity: 0.3;
+}
+
+/* When movie is hovered over, the div with nth-of-type(3) will have its background color set to transparent */
+.movie:hover div:nth-of-type(3) {
+  background-color: transparent;
+}
+
+/* When movie is hovered over, the div with nth-of-type(1) will have its opacity set to 1 */
+.movie:hover div:nth-of-type(1) {
+  opacity: 1;
+}
+
+@media screen and (max-width: 600px) {
+  /* Change the padding for the entire app when screen width is below 600px */
+  .app {
+    padding: 4rem 2rem;
   }
-  to {
-    transform: rotate(360deg);
+
+  /* Adjust the padding and width of the search container when screen width is below 600px */
+  .search {
+    padding: 1rem 1.75rem;
+    width: 100%;
+  }
+
+  /* Change the font-size of the input field when screen width is below 600px */
+  .search input {
+    font-size: 1rem;
+  }
+
+  /* Change the width and height of the search icon when screen width is below 600px */
+  .search img {
+    width: 20px;
+    height: 20px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  /* When the screen width is 400px or less, the following styles will be applied */
+  .app {
+    /* Reduce the padding for smaller screens */
+    padding: 4rem 1rem;
+  }
+
+  h1 {
+    /* Reduce the font size for smaller screens */
+    font-size: 2rem;
+  }
+
+  .container {
+    /* Reduce the margin-top for smaller screens */
+    margin-top: 2rem;
+  }
+
+  .movie {
+    /* Set the width to 100% for smaller screens */
+    width: 100%;
+    margin: 1rem;
   }
 }
